improve receipt style: diagnose invisible border issue

--- a/public/receipt.css
+++ b/public/receipt.css
@@ -314,12 +314,12 @@ button.view1button {
 	cursor: pointer;
 }
 
-.lightswitch div:nth-child(2) {
+.lightswitch div:nth-child(3) {
 	border-bottom: 2px solid grey;
 	border-left: 2px solid grey;
 }
 
-.lightswitch div:nth-child(1) {
+.lightswitch div:nth-child(2) {
 	border-bottom: 2px solid grey;
 	border-right: 2px solid grey;
 }
